# comicsdb-drogon-mongodb

./: CMakeLists.txt  README.md  config.json  main.cc
comicsdb/: comic.h  comicsdb.cc  comicsdb.h
controllers/: comicService_v1_Service.cc  comicService_v1_Service.h
plugins/: mongodb_plugin.cc
test/: CMakeLists.txt
